# nyc-taxi-predictions-2025

./: pyproject.toml
app/: api.py
app/api/: api.py  requirements.txt
app/ui/: main.py
experiments/: 01-databricks_mlflow_codel_experiments.ipynb
notebooks/: challenger-experiments.ipynb  initial_tracking.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/models/workspace.default.nyc-taxi-model/: meta.yaml
preprocessor/: preprocessor.b
training_pipeline/: 02-training_pipeline_prefect.py  train_challenger.py
