[project]
name = "nyc-taxi-predictions-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jupyter>=1.1.1",
    "mlflow>=3.5.1",
    "pandas>=2.3.3",
    "pipreqs>=0.5.0",
    "pydantic>=2.11.7",
    "scikit-learn==1.4.2",
    "xgboost>=3.1.1",
]
